# adpcm-xq

./: CMakeLists.txt  README  README.md  adpcm-dns.c  adpcm-lib.c  adpcm-lib.h  adpcm-xq.c  library.properties
